# ifm_nettle

./: CMakeLists.txt  README.en.md  README.md  build.sh  config.h.in  ifm_libgcrypt.pc.in  ifm_libhv2ev.pc.in  ifm_libverto.pc.in  ifm_libxcrypt.pc.in  ifm_nettle.pc.in
bench/: CMakeLists.txt  ifm_nettle-benchmark.c  timing.c  timing.h
cmake/: checker.cmake  options.cmake  set_build_flags.cmake
patchs/curl/: README.md  auto_patch_curl.sh  curl-support-unizip-instead-of-zlib-spec.patch  support-unizip-instead-of-zlib-spec.patch  support-unizip-instead-of-zlib.patch
patchs/dnsmasq/: README.md  auto_patch_dnsmasq.sh  support-ifm_nettle-instead-of-nettle-spec.patch  support-ifm_nettle-instead-of-nettle.patch
patchs/elfutils/: README.md  auto_patch_elfutils.sh  elfutils-support-unizip-instead-of-zlib-spec.patch  support-unizip-instead-of-zlib.patch
patchs/gnupg2/: README.md  auto_patch_gnupg2.sh  support-ifm-gcrypt-instead-of-gcrypt-in-gnupg2.patch  support-ifm_gcrypt-in-gnupg-spec.patch
patchs/gnutls/: README.md  auto_patch_gnutls.sh  gnutls-support-ifm_nettle-instead-of-nettle-spec.patch  support-ifm_nettle-instead-of-nettle.patch
patchs/gssproxy/: README.md  auto_patch_gssproxy.sh  ifm-gssproxy-spec.patch  ifm-use-ifm_libverto-instead-of-verto.patch  pre_upgrade_krb5.sh
patchs/libevhtp/: README.md  auto_patch_libevhtp.sh  ifm-libvhtp-spec.patch  ifm-use-libhv-instead-of-libev.patch
patchs/libiscsi/: 0024-support-ifm_libgcrypt-instead-of-libgcrypt.patch  README.md  auto_patch_libiscsi.sh  libiscsi-support-ifm_libgcrypt-instead-of-libgcrypt-spec.patch
patchs/libxslt/: README.md  auto_patch_libsxlt.sh  libxslt-support-ifm_libgcrypt-instead-of-libgcrypt-spec.patch  support-ifm_libgcrypt-instead-of-gcrypt.patch
patchs/lzma-sdk/: LZMA-SDK-spec.patch  README.md  auto_patch_lzma-sdk.sh  build-the-7lzma-lib.patch
patchs/nghttp2/: 0001-nghttp-client-implementation-based-on-libverto.patch  0002-nghttpd-server-implementation-based-on-libverto.patch  0003-h2load-Benchmarking-implementation-based-on-libverto.patch  0004-updata-build-file.patch  README.md  auto_patch_nghttp2.sh  ifm-nghttp2-spec.patch  ifm-use-libverto-instead-of-libev.patch  nghttp2.spec  update-build-file.patch
patchs/pam/: README.md  auto_patch_pam.sh  support-ifm-gcrypt-pam-spec.patch  support-ifm_crypt-instead-of-crypt.patch
patchs/systemd/: README.md  auto_patch_systemd.sh  support-systemd-spec.patch  support-unizip-instead-of-zlib.patch
src/: CMakeLists.txt  aes.c  aes.h  aes_common.h  aes_meta.h  bench_gcm_meta.h  bench_rsa_meta.h  bench_sha2_meta.h  bench_sm3_meta.h  cbc.c  cbc.h  cipher.c  cipher.h  gcm.c  gcm.h  gcm_meta.h  gcm_sm4.c  hmac.c  hmac.h  hmac_meta.h  ifm_utils.c  ifm_utils.h  md5.c  md5.h  md5_meta.h  nettle-meta.h  rsa.c  rsa.h  rsa_meta.h  rsa_pkcs1.c  rsa_pkcs1.h  rsa_utils.c  rsa_utils.h  sha2.c  sha2.h  sha2_meta.h  sm3.c  sm3.h  sm3_meta.h  sm4.c  (+3 more)
src/gcrypt/: gcry_uadk_aes.c  gcry_uadk_aes.h  gcry_uadk_sha2.c  gcry_uadk_sha2.h  gcrypt_aes_meta.h  gcrypt_sha2_meta.h  ifm_gcrypt.h  uadk_aes_meta.h  uadk_sha2_meta.h  visibility.c
src/hv2ev/: hv2ev.c  hv2ev.h
src/nettle_src/: gcm-sm4.c  sm4-meta.c  sm4.c  sm4.h
src/verto/: ifm_verto.c  ifm_verto.h  ifm_verto_libhv.c  ifm_verto_libhv.h  libhv_meta.h  module.c  module.h  verto.c
src/verto_tmp/: ifm_verto.h  ifm_verto_module.h  libhv_meta.h  verto.c
src/xcrypt/: crypt.c  ifm_crypt.h  xcrypt_uadk_sha2.c  xcrypt_uadk_sha2.h
tests/: CMakeLists.txt  aes_keywrap_ut.cpp  aes_ut.cpp  cbc_ut.cpp  gcm_ut.cpp  gcrypt_basic_cipher_ut.cpp  gcrypt_basic_ut.cpp  gcrypt_benchmark.cpp  gcrypt_md_ut.cpp  gcrypt_pk_oaep.h  gcrypt_pk_ut.cpp  gcrypt_ut_common.h  hmac_ut.cpp  hv2ev_ut.cpp  md5_ut.cpp  rsa_ut.cpp  sha224_ut.cpp  sha256_ut.cpp  sha384_ut.cpp  sha512_224_ut.cpp  sha512_256_ut.cpp  sha512_ut.cpp  sm3_ut.cpp  sm4_ut.cpp  testutils.cpp  testutils.h  verto_ut.cpp  xcrypt_basic_ut.cpp
tests/test_gcrypt_h/: t-common.h
